--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-notifier": "^10.0.1",
     "nodemailer": "^6.8.0",
     "nodemailer-smtp-transport": "^2.7.4",
+    "socket.io": "^4.5.4",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
   },
